objects/Search__c.object
<CustomObject>
    <description>This object holds the search details.</description>
    <fields>
        <fullName>Child_Object_Name__c</fullName>
        <description>Hold child object name</description>
        <inlineHelpText>Hold child object name</inlineHelpText>
        <label>Child Object Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Logic_Action_Type__c</fullName>
        <description>Holds filter logic type</description>
        <inlineHelpText>Holds filter logic type</inlineHelpText>
        <label>Filter Logic Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Name__c</fullName>
        <description>Holds Parent object api name.</description>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Selected_Fields__c</fullName>
        <description>Holds selected fields second screen.</description>
        <label>Pre Selected Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Search</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>